added pawn promotion

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         c.width = WIDTH;
         c.height = HEIGHT;
         
+        // start timer
         var start = Date.now();
         setInterval(() => {
             var delta = Date.now() - start; // milliseconds elapsed since start
