--- a/index.html
+++ b/index.html
@@ -8,9 +8,38 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <img id="chess_img" src="chess_pieces.png" alt="Italian Trulli">
-    <script src="piece_classes.js"></script>
+    <div class="main-container">
+        <div class="container">
+            <h1>Time Control</h1>
+            <div class="time-ctrl-btn-container">
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+                <div class="time-ctrl-btn">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            
+        </div>
+    </div>
+
+    <!-- <canvas id="gameCanvas"></canvas> -->
+
+    <!-- <script src="piece_classes.js"></script>
     <script>
         // turn this relative to current width/height of window
         WIDTH = 800
@@ -30,6 +59,6 @@
         }
         img.src = "chess_pieces.png";
         
-    </script>
+    </script> -->
 </body>
 </html>
