--- a/index.html
+++ b/index.html
@@ -4,36 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-container">
         <div class="container">
-            <h1>Time Control</h1>
+            <h1 class="container-label">Select Time Control</h1>
             <div class="time-ctrl-btn-container">
                 <div class="time-ctrl-btn">
+                    <h1>30s | 0</h1>
+                    <h3>Hyper Bullet</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>1 | 0</h1>
+                    <h3>Bullet</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>1 | 1</h1>
+                    <h3>Bullet</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>2 | 0</h1>
+                    <h3>Bullet</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>3 | 0</h1>
+                    <h3>Blitz</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>3 | 2</h1>
+                    <h3>Blitz</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>5 | 0</h1>
+                    <h3>Blitz</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>10 | 0</h1>
+                    <h3>Rapid</h3>
                 </div>
                 <div class="time-ctrl-btn">
+                    <h1>30 | 0</h1>
+                    <h3>Classical</h3>
                 </div>
             </div>
         </div>
-        <div class="container">
-            
+        <div class="container2">
+            <h1 class="text-logo">EZ_Chess</h1>
+            <input placeholder="Enter name" class="in" type="text">
+            <button class="btn">Play With a Friend</button>
+            <button class="btn">Play With a Computer</button>
         </div>
     </div>
 
